# Coresets

./: README.md  config.conf
src/: CMakeLists.txt  MPI_functions.h  combiner.h  config.cpp  config.h  coreset.cpp  data.cpp  data.h  fake_data_gen.cpp  redsvd.h  worker.cpp  worker.h
